# log-timer

./: .gitignore  Cargo.toml  Dockerfile  README.md  before-merge.md  build.rs  checklist.md  flake.nix  test.nu  todo.md
src/: cli.rs  main.rs  row.rs
tests/: run.nu  tests.nu
