[package]
name = "log-timer"
version = "0.3.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.32", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
csv = "1.3.0"
dirs = "5.0.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[build-dependencies]
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.10"
serde = { version = "1.0.195", features = ["derive"] }
